@@ -4,7 +4,8 @@ Released 2.4.17 2014-xx-xx
 Changes since 2.4.16:
 
 Lib/
-* 
+* New hook syncrepl_refreshdone() in ldap.syncrepl.SyncReplConsumer
+  (thanks to Petr Spacek)
 
 Modules/
 * Added support for getting file descriptor of connection
